Remove unused imports

--- a/eight_trees/eight_trees.ipynb
+++ b/eight_trees/eight_trees.ipynb
@@ -2,13 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit.circuit import QuantumCircuit\n",
-    "from qiskit.quantum_info import Statevector\n",
-    "from qiskit.visualization import plot_histogram\n",
     "from qiskit_aer import AerSimulator"
    ]
   },
@@ -44,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,67 +77,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "[0, 1, 1, 0, 1]"
       ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "input0 = [0, 0, 0, 0, 0, 0, 0, 0]\n",
-    "input1 = [0, 1, 1, 0, 1, 0, 0, 1]\n",
-    "input2 = [1, 1, 1, 1, 1, 1, 1, 1]\n",
-    "input3 = [1, 1, 1, 0, 1, 1, 1, 1]\n",
-    "input4 = [0, 0, 1, 1, 1, 1, 1, 1]\n",
+    "inputs = [\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0], # 0\n",
+    "    [0, 1, 1, 0, 1, 0, 0, 1], # 1\n",
+    "    [1, 1, 1, 1, 1, 1, 1, 1], # 1\n",
+    "    [1, 1, 1, 0, 1, 1, 1, 1], # 0\n",
+    "    [0, 0, 1, 1, 1, 1, 1, 1]  # 1\n",
+    "]\n",
     "\n",
-    "display(eight_trees(input0))\n",
-    "display(eight_trees(input1))\n",
-    "display(eight_trees(input2))\n",
-    "display(eight_trees(input3))\n",
-    "display(eight_trees(input4))"
+    "[eight_trees(i) for i in inputs]"
    ]
   }
  ],
