--- a/eight_trees/quantum_solutions/eight_trees.ipynb
+++ b/eight_trees/quantum_solutions/eight_trees.ipynb
@@ -12,9 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n2 QBits\\nqc.cx(0, 2)\\nqc.cx(1, 2)\\nqc.ccx(0, 1, 2)\\n\\n3 QBits\\nqc.cx(0, 3)\\nqc.cx(1, 3)\\nqc.cx(2, 3)\\nqc.ccx(0, 1, 3)\\nqc.ccx(1, 2, 3)\\n\\n4 QBits\\nqc.cx(0, 4)\\nqc.cx(1, 4)\\nqc.cx(2, 4)\\nqc.cx(3, 4)\\nqc.ccx(0, 1, 4)\\nqc.ccx(1, 2, 4)\\nqc.ccx(2, 3, 4)\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "2 QBits\n",
@@ -42,8 +55,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "def eight_trees(trees: list) -> int:\n",
@@ -68,11 +83,129 @@
     "\n",
     "    qc.measure(8, 0)\n",
     "\n",
+    "    display(qc.draw())\n",
+    "\n",
     "    backend = AerSimulator()\n",
     "    result = backend.run(qc, shots = 1).result().get_counts()\n",
     "\n",
     "    output = list(result.keys())[0]\n",
     "    return int(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">     ┌───┐                                                                 »\n",
+       "q_0: ┤ X ├──■───────────────────────────────────────■──────────────────────»\n",
+       "     └───┘  │                                       │                      »\n",
+       "q_1: ───────┼────■──────────────────────────────────■────■─────────────────»\n",
+       "     ┌───┐  │    │                                  │    │                 »\n",
+       "q_2: ┤ X ├──┼────┼────■─────────────────────────────┼────■────■────────────»\n",
+       "     ├───┤  │    │    │                             │    │    │            »\n",
+       "q_3: ┤ X ├──┼────┼────┼────■────────────────────────┼────┼────■────■───────»\n",
+       "     └───┘  │    │    │    │                        │    │    │    │       »\n",
+       "q_4: ───────┼────┼────┼────┼────■───────────────────┼────┼────┼────■────■──»\n",
+       "            │    │    │    │    │                   │    │    │    │    │  »\n",
+       "q_5: ───────┼────┼────┼────┼────┼────■──────────────┼────┼────┼────┼────■──»\n",
+       "     ┌───┐  │    │    │    │    │    │              │    │    │    │    │  »\n",
+       "q_6: ┤ X ├──┼────┼────┼────┼────┼────┼────■─────────┼────┼────┼────┼────┼──»\n",
+       "     ├───┤  │    │    │    │    │    │    │         │    │    │    │    │  »\n",
+       "q_7: ┤ X ├──┼────┼────┼────┼────┼────┼────┼────■────┼────┼────┼────┼────┼──»\n",
+       "     └───┘┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐»\n",
+       "q_8: ─────┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├»\n",
+       "          └───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘»\n",
+       "c: 1/══════════════════════════════════════════════════════════════════════»\n",
+       "                                                                           »\n",
+       "«                  \n",
+       "«q_0: ─────────────\n",
+       "«                  \n",
+       "«q_1: ─────────────\n",
+       "«                  \n",
+       "«q_2: ─────────────\n",
+       "«                  \n",
+       "«q_3: ─────────────\n",
+       "«                  \n",
+       "«q_4: ─────────────\n",
+       "«                  \n",
+       "«q_5: ──■──────────\n",
+       "«       │          \n",
+       "«q_6: ──■────■─────\n",
+       "«       │    │     \n",
+       "«q_7: ──┼────■─────\n",
+       "«     ┌─┴─┐┌─┴─┐┌─┐\n",
+       "«q_8: ┤ X ├┤ X ├┤M├\n",
+       "«     └───┘└───┘└╥┘\n",
+       "«c: 1/═══════════╩═\n",
+       "«                0 </pre>"
+      ],
+      "text/plain": [
+       "     ┌───┐                                                                 »\n",
+       "q_0: ┤ X ├──■───────────────────────────────────────■──────────────────────»\n",
+       "     └───┘  │                                       │                      »\n",
+       "q_1: ───────┼────■──────────────────────────────────■────■─────────────────»\n",
+       "     ┌───┐  │    │                                  │    │                 »\n",
+       "q_2: ┤ X ├──┼────┼────■─────────────────────────────┼────■────■────────────»\n",
+       "     ├───┤  │    │    │                             │    │    │            »\n",
+       "q_3: ┤ X ├──┼────┼────┼────■────────────────────────┼────┼────■────■───────»\n",
+       "     └───┘  │    │    │    │                        │    │    │    │       »\n",
+       "q_4: ───────┼────┼────┼────┼────■───────────────────┼────┼────┼────■────■──»\n",
+       "            │    │    │    │    │                   │    │    │    │    │  »\n",
+       "q_5: ───────┼────┼────┼────┼────┼────■──────────────┼────┼────┼────┼────■──»\n",
+       "     ┌───┐  │    │    │    │    │    │              │    │    │    │    │  »\n",
+       "q_6: ┤ X ├──┼────┼────┼────┼────┼────┼────■─────────┼────┼────┼────┼────┼──»\n",
+       "     ├───┤  │    │    │    │    │    │    │         │    │    │    │    │  »\n",
+       "q_7: ┤ X ├──┼────┼────┼────┼────┼────┼────┼────■────┼────┼────┼────┼────┼──»\n",
+       "     └───┘┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐┌─┴─┐»\n",
+       "q_8: ─────┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├┤ X ├»\n",
+       "          └───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘»\n",
+       "c: 1/══════════════════════════════════════════════════════════════════════»\n",
+       "                                                                           »\n",
+       "«                  \n",
+       "«q_0: ─────────────\n",
+       "«                  \n",
+       "«q_1: ─────────────\n",
+       "«                  \n",
+       "«q_2: ─────────────\n",
+       "«                  \n",
+       "«q_3: ─────────────\n",
+       "«                  \n",
+       "«q_4: ─────────────\n",
+       "«                  \n",
+       "«q_5: ──■──────────\n",
+       "«       │          \n",
+       "«q_6: ──■────■─────\n",
+       "«       │    │     \n",
+       "«q_7: ──┼────■─────\n",
+       "«     ┌─┴─┐┌─┴─┐┌─┐\n",
+       "«q_8: ┤ X ├┤ X ├┤M├\n",
+       "«     └───┘└───┘└╥┘\n",
+       "«c: 1/═══════════╩═\n",
+       "«                0 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eight_trees([1, 0, 1, 1, 0, 0, 1, 1])"
    ]
   }
  ],
