Refactor eight_trees function to use 'n' in list comprehensions

--- a/eight_trees/quantum_solutions/eight_trees.ipynb
+++ b/eight_trees/quantum_solutions/eight_trees.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {
     "metadata": {}
    },
@@ -21,11 +21,11 @@
     "def eight_trees(trees: list) -> int:\n",
     "    n = len(trees)\n",
     "    qc = QuantumCircuit(n + 1, 1)\n",
-    "    [qc.x(i) for i in range(len(trees)) if trees[i]]\n",
+    "    [qc.x(i) for i in range(n) if trees[i]]\n",
     "\n",
-    "    [qc.cx(i, n) for i in range(len(trees))]\n",
+    "    [qc.cx(i, n) for i in range(n)]\n",
     "    \n",
-    "    [qc.ccx(i, i+1, n) for i in range(len(trees) - 1)]\n",
+    "    [qc.ccx(i, i+1, n) for i in range(n - 1)]\n",
     "\n",
     "    qc.measure(n, 0)\n",
     "\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {
     "metadata": {}
    },
@@ -61,7 +61,7 @@
        "1"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
